force-app/main/default/objects/SyncAttempt__c/SyncAttempt__c.object-meta.xml
<CustomObject>
    <label>Sync Attempt</label>
    <nameField>
        <label>SyncAttempt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sync Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>