force-app/main/default/objects/SyncAttempt__c/fields/Rest_Logger__c.field-meta.xml
<CustomField>
    <fullName>Rest_Logger__c</fullName>
    <label>Rest Logger</label>
    <referenceTo>RestLogger__c</referenceTo>
    <relationshipLabel>Sync Attempts</relationshipLabel>
    <relationshipName>Sync_Attempts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>