force-app/main/default/objects/SyncAttempt__c/fields/ScheduledJobId__c.field-meta.xml
<CustomField>
    <fullName>ScheduledJobId__c</fullName>
    <label>ScheduledJobId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>