force-app/main/default/objects/SyncAttempt__c/fields/Times_Executed__c.field-meta.xml
<CustomField>
    <fullName>Times_Executed__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Times Executed</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>